<?xml version="1.0"?>
<package>
  <name>RLML</name>
  <version>0.0.0</version>
  <description>The RLML package</description>
  <maintainer email="ua22lyx@gmail.com">chris</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pcl_conversions</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pcl_conversions</run_depend>


</package>
